# varthanam

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ENGINEERING_PLAYBOOK.md  PLANS.md  README.md  TASKS.md  main.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: alembic.ini  requirements.txt  varthanam.db
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users.py  0002_create_core_aggregation_models.py  0003_create_user_article_state.py  0004_create_rule_models.py  7f115501899b_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  errors.py  logging.py  security.py  settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  article.py  collection.py  collection_feed.py  feed.py  rule.py  rule_match.py  user.py  user_article_state.py
backend/tests/: conftest.py  test_app_factory.py  test_article_filters.py  test_article_state_endpoints.py  test_auth.py  test_collection_articles.py  test_collection_feed_assignments.py  test_collection_feeds_list.py  test_collections.py  test_db.py  test_error_handling.py  test_feed_fetcher.py  test_feeds.py  test_health.py  test_phase2_models.py  test_rule_matcher.py  test_rule_models.py  test_rule_runner.py  test_rule_scheduler.py  test_rules_crud.py  test_settings.py  test_user_article_state.py  test_users.py
frontend/: PR_DESCRIPTION.md  README.md  UI_SPEC.md  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+117 files in other folders)
