[project]
name = "varthanam"
version = "0.1.0"
description = "Varthanam is a personal news and RSS aggregation platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "uvicorn>=0.40.0",
    "psycopg>=3.3.2",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.2.1",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.6.9",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
